--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="centro" id="centro"></div>
             <div class="canto" id="infDir"></div>
         </div>
-        <button onclick="sortear()">Sortear arta</button>
+        <button onclick="sortear()">Sortear Carta</button>
     </div>
     <script src="app.js"></script>
 </body>
